Fixed container overflow accordion

--- a/static/css/accordion.css
+++ b/static/css/accordion.css
@@ -38,6 +38,7 @@
 }
 
 .tab-content {
+  overflow: auto;
   max-height: 0;
   padding: 0 1em;
   color: #2c3e50;
